5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1644_1053.log
== TEST (2019-04-09 07:55:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = int("Digite o nome do patrono: ")
	if (patrono == "cervo"):
		mensagem = "cervo eh patrono do Harry Potter"
	else: 
		mensagem = patrono " nao eh patrono do Harry Potter"
	print(mesnagem)	
-- ERROR:
File "XXXX", line 7
    if (patrono == "cervo"):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:07:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = int("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono " nao eh patrono do Harry Potter"
print(mesnagem)	
-- ERROR:
File "XXXX", line 10
    mensagem = patrono " nao eh patrono do Harry Potter"
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:07:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = int("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mesnagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    patrono = int("Digite o nome do patrono: ")
ValueError: invalid literal for int() with base 10: 'Digite o nome do patrono: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:07:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = input("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono + " nao eh patrono do Harry Potter"
print(mesnagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(mesnagem)	
NameError: name 'mesnagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:08:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = input("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensnagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(mensnagem)	
NameError: name 'mensnagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:08:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = input("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 08:08:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = input("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 08:08:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

# Leitura do nome do patrono:
patrono = input("Digite o nome do patrono: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else: 
	mensagem = patrono + " nao eh patrono do Harry Potter"

print(mensagem)	
-- EXECUTION TIME:
0.182246
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
